--- a/route-proj/src/index.css
+++ b/route-proj/src/index.css
@@ -103,7 +103,7 @@ form[action$="destroy"] button {
 }
 
 #sidebar {
-  width: 22rem;
+  width: 40rem;
   background-color: #f7f7f7;
   border-right: solid 1px #e3e3e3;
   display: flex;
@@ -240,6 +240,7 @@ i {
 
 #detail {
   flex: 1;
+  margin: 5rem;
   padding: 2rem 4rem;
   width: 100%;
 }
